:hammer: abstract class added and refactoring code